--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -73,7 +73,7 @@ header#header-main h1 {
   overflow: hidden;
   height: 48px;
   text-indent: -1000px;
-  background-image: url(../images/brand_sp.svg);
+  background-image: url('brand_sp.svg');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -130,7 +130,7 @@ section {
 
 /* line 103, ../sass/main.scss */
 #search-area {
-  background-image: url(../images/goldtexture.jpg);
+  background-image: url('goldtexture.jpg');
   background-position: center;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.43) inset;
   -webkit-background-size: cover;
@@ -148,7 +148,7 @@ section {
 #search-area .inputbox {
   border: 1px solid #444;
   background-color: #FFF;
-  background-image: url(../images/search-helptext.svg);
+  background-image: url('search-helptext.svg');
   background-repeat: no-repeat;
   position: relative;
   display: inline-block;
@@ -174,7 +174,7 @@ section {
 }
 /* line 146, ../sass/main.scss */
 #search-area #search-submit {
-  background-image: url(../images/search-submit.svg);
+  background-image: url('search-submit.svg');
   background-color: #F9E073;
   border: 1px solid;
   border-color: #caa609;
@@ -501,7 +501,7 @@ section {
 #judgements ul li .baloon {
   width: 100px;
   height: 100px;
-  background-image: url(../images/baloon.svg);
+  background-image: url('baloon.svg');
   position: absolute;
   z-index: 100;
   top: 70px;
@@ -513,7 +513,7 @@ section {
 }
 /* line 459, ../sass/main.scss */
 #judgements .kobayashi .puppet {
-  background-image: url(../images/judgement/kobayashi.png);
+  background-image: url('judgement/kobayashi.png');
 }
 
 /* line 464, ../sass/main.scss */
