--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -167,4 +167,4 @@
       google.setOnLoadCallback(drawChart);
       setTimeout(function(){$("#defs").next().remove()},500)
   </script>
-<%= javascript_include_tag asset_path("main") %>
+<%= javascript_include_tag("main") %>
