--- a/app/views/inspection/show.html.erb
+++ b/app/views/inspection/show.html.erb
@@ -4,4 +4,5 @@
 
   <tr><td>顔認識API</td><td><%= link_to("Face Recognize API", inspection_url) %></td><td>アップロードした画像から顔等を検出するAPI</td></tr>
    <tr><td>JSONConverterAPI</td><td><%= link_to("JSON Converter API", json_converter_url) %></td><td>フォーマットに従った、xlsやxlsxやcsvファイルをJSON形式に変換するAPI</td></tr>
+   <tr><td>お絵かきAPI</td><td><%= link_to("draw in HTML5 API", draw_inspection_url) %></td><td>ブラウザ上でお絵描きしてお絵描きした内容を画像にしてダウンロードできるAPI</td></tr>
 </table>
