--- a/app/views/inspection/draw.html.erb
+++ b/app/views/inspection/draw.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag("farbtastic") %>
+<%= stylesheet_link_tag("paint") %>
 <%= javascript_include_tag("jquery-ui.min") %>
 <%= javascript_include_tag("farbtastic") %>
 <%= javascript_include_tag("paint") %>
