--- a/app/views/inspection/show.html.erb
+++ b/app/views/inspection/show.html.erb
@@ -2,8 +2,8 @@
 <table border="1">
   <tr><td>API名</td><td>リンク</td><td>説明</td></tr>
 
-  <tr><td>顔認識API</td><td><%= link_to("Face Recognize API", inspection_url) %></td><td>アップロードした画像から顔等を検出するAPI</td></tr>
+  <tr><td>顔認識API</td><td><%= link_to("Face Recognize API", face_recognize_inspection_url) %></td><td>アップロードした画像から顔等を検出するAPI</td></tr>
    <tr><td>JSONConverterAPI</td><td><%= link_to("JSON Converter API", json_converter_url) %></td><td>フォーマットに従った、xlsやxlsxやcsvファイルをJSON形式に変換するAPI</td></tr>
    <tr><td>お絵かきAPI</td><td><%= link_to("draw in HTML5 API", draw_inspection_url) %></td><td>ブラウザ上でお絵描きしてお絵描きした内容を画像にしてダウンロードできるAPI</td></tr>
-   <tr><td>音声API</td><td><%= link_to("draw in HTML5 API", audio_inspection_url) %></td><td>ブラウザ上でお絵描きしてお絵描きした内容を画像にしてダウンロードできるAPI</td></tr>
+   <tr><td>音声API</td><td><%= link_to("Audio API", audio_inspection_url) %></td><td>アップロードした音声ファイルを再生したり、解析したりするAPI</td></tr>
 </table>
