顔認識何も検出できなかったら、204にしておく

--- a/app/views/inspection/face_recognize.html.erb
+++ b/app/views/inspection/face_recognize.html.erb
@@ -19,8 +19,12 @@
       // contentTypeもfalseに指定
       contentType: false
      });
-     request.done(function( data ) {
-       draw(data);
+     request.done(function(data, status, xhr) {
+       if(xhr.status == 204){
+
+       }else{
+         draw(data);
+       }
      });
      return false;
   });
