--- a/app/views/layouts/inspection.html.erb
+++ b/app/views/layouts/inspection.html.erb
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag("jquery-ui.min") %>
+    <%= stylesheet_link_tag("jquery.toast.min") %>
     <%= javascript_include_tag("jquery.min") %>
+    <%= javascript_include_tag("jquery.toast.min") %>
     <title><%= content_for?(:title) ? yield(:title) : "検証用" %></title>
   </head>
   <body>
